--- a/elementor-pt_PT.po
+++ b/elementor-pt_PT.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Elementor\n"
 "POT-Creation-Date: 2017-03-08 09:12+0000\n"
-"PO-Revision-Date: 2017-03-08 10:04+0000\n"
+"PO-Revision-Date: 2017-04-04 16:41+0100\n"
 "Last-Translator: Pedro Mendonça <ped.gaspar@gmail.com>\n"
 "Language-Team: Pedro Mendonça <ped.gaspar@gmail.com>\n"
 "Language: pt_PT\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.12\n"
+"X-Generator: Poedit 2.0\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;"
 "_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;"
@@ -1269,7 +1269,7 @@ msgstr ""
 
 #: includes/elements/column.php:194 includes/elements/section.php:603
 msgid "Heading Color"
-msgstr "Cor do cabeçalho"
+msgstr "Cor do título"
 
 #: includes/elements/column.php:207 includes/elements/section.php:616
 #: includes/widgets/alert.php:154 includes/widgets/alert.php:184
@@ -2534,7 +2534,7 @@ msgstr "Impedir deslocamento"
 
 #: includes/widgets/heading.php:13
 msgid "Heading"
-msgstr "Cabeçalho"
+msgstr "Título"
 
 #: includes/widgets/heading.php:33 includes/widgets/progress.php:37
 msgid "Enter your title"
@@ -2542,7 +2542,7 @@ msgstr "Insira o seu título"
 
 #: includes/widgets/heading.php:34
 msgid "This is heading element"
-msgstr "Isto é o cabeçalho"
+msgstr "Isto é o título"
 
 #: includes/widgets/heading.php:62
 msgid "XL"
@@ -2646,7 +2646,7 @@ msgstr "Quadrado"
 
 #: includes/widgets/icon-box.php:78 includes/widgets/image-box.php:48
 msgid "This is the heading"
-msgstr "Isto é o cabeçalho"
+msgstr "Isto é o título"
 
 #: includes/widgets/icon-box.php:89 includes/widgets/image-box.php:59
 msgid ""
